export class Customer {
  constructor(private name: string, private id: string) {}
}
